<layout>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <Button android:id="@+id/reg_login_toggle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_button_height"
            android:background="@color/colorPrimary"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/registration"
            android:layout_alignParentBottom="true"/>
        <LinearLayout
            android:id="@+id/login_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:visibility="visible"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_margin="@dimen/large_margin"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />


            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/registration_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_above="@id/reg_login_toggle"
            android:visibility="invisible"
            android:orientation="vertical">
            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Registration"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/large_margin"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/reg_first_phase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:layout_below="@id/heading"
                tools:context="com.example.android.appusagestatistics.LoginActivity">


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="First name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/last_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Last name"
                                android:inputType="textPersonName"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/mobile_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Mobile number"
                                android:inputType="phone"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/cnic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Cnic No."
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginTop="@dimen/normal_margin"
                            android:layout_marginLeft="@dimen/normal_margin"
                            android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Gender"
                            android:textSize="@dimen/medium_text_size"/>
                        <RadioGroup
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/normal_margin"
                            android:orientation="horizontal">
                            <RadioButton
                                android:id="@+id/male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Male"
                                android:layout_gravity="left"/>
                            <RadioButton
                                android:id="@+id/female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Female"
                                android:layout_marginLeft="@dimen/large_margin"
                                android:layout_gravity="right"/>
                        </RadioGroup>
                        </LinearLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/Address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Address"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="City"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </ScrollView>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/next"
                    android:layout_width="@dimen/fab_size"
                    android:layout_height="@dimen/fab_size"
                    app:fabSize="normal"
                    app:elevation="@dimen/normal_elevation"
                    android:layout_gravity="right|bottom"
                    app:backgroundTint="@color/colorPrimary"
                    app:rippleColor="@color/colorSecondary"
                    android:src="@drawable/down_arrow"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/reg_second_phase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:visibility="invisible"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_below="@id/heading"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/up"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:fabSize="normal"
                    app:elevation="@dimen/normal_elevation"
                    android:layout_gravity="right"
                    app:backgroundTint="@color/colorPrimary"
                    app:rippleColor="@color/colorSecondary"
                    android:src="@drawable/up_arrow"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Username"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/reg_confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm password"
                        android:imeActionId="@+id/registration"
                        android:imeActionLabel="@string/sign_up"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/security_keyword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Security keywords"
                        android:imeActionId="@+id/registration"
                        android:imeActionLabel="@string/sign_up"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />


                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/reg"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Registration"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>



    </RelativeLayout>
</layout>
